@@ -10,21 +10,9 @@ AC_DEFUN([BANSHEE_CHECK_LIBBANSHEE],
 	LIBBANSHEE_LIBS=""
 	LIBBANSHEE_CFLAGS=""
 
-	PKG_CHECK_MODULES(GLIB, glib-2.0)
-	SHAMROCK_CONCAT_MODULE(LIBBANSHEE, GLIB)
-
-	dnl PKG_CHECK_MODULES(DBUS, dbus-1 dbus-glib-1)
-	dnl SHAMROCK_CONCAT_MODULE(LIBBANSHEE, DBUS)
+	PKG_CHECK_MODULES(GDK_X11, gdk-x11-2.0 >= 2.8)
+	SHAMROCK_CONCAT_MODULE(LIBBANSHEE, GDK_X11)	
 	
-	PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.8)
-	SHAMROCK_CONCAT_MODULE(LIBBANSHEE, GTK)	
-	
-	PKG_CHECK_MODULES(GNOMEVFS, gnome-vfs-2.0)
-	SHAMROCK_CONCAT_MODULE(LIBBANSHEE, GNOMEVFS)
-	
-	dnl PKG_CHECK_MODULES(MUSICBRAINZ, libmusicbrainz >= 2.1.1)
-	dnl SHAMROCK_CONCAT_MODULE(LIBBANSHEE, MUSICBRAINZ)
-
 	AC_SUBST(LIBBANSHEE_CFLAGS)
 	AC_SUBST(LIBBANSHEE_LIBS)
 ])
