@@ -144,6 +144,7 @@
     <File name="Banshee.MediaProfiles/PipelineVariable.cs" subtype="Code" buildaction="Compile" />
     <File name="Banshee.MediaProfiles/Profile.cs" subtype="Code" buildaction="Compile" />
     <File name="Banshee.MediaProfiles/ProfileConfiguration.cs" subtype="Code" buildaction="Compile" />
+    <File name="Banshee.Hardware/IDeviceMediaCapabilities.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
