@@ -1,4 +1,3 @@
-if ENABLE_MTP
 ASSEMBLY = Banshee.Dap.Mtp
 TARGET = library
 LINK = $(REF_DAP_MTP)
@@ -8,5 +7,8 @@ SOURCES = Banshee.Dap.Mtp/MtpSource.cs
 
 RESOURCES = Banshee.Dap.Mtp.addin.xml
 
+if ENABLE_MTP
 include $(top_srcdir)/build/build.mk
+else
+EXTRA_DIST = $(SOURCES) $(RESOURCES)
 endif
