@@ -1,7 +1,0 @@
-<configuration>
-	<dllmap dll="libglib-2.0.so" target="libglib-2.0.so.0" />
-	<dllmap dll="libgobject-2.0-0.dll" target="libgobject-2.0.so.0" />
-	<dllmap dll="libgtk-win32-2.0-0.dll" target="libgtk-x11-2.0.so.0" />
-	<dllmap dll="libbonobo-2.so" target="libbonobo-2.so.0" />
-	<dllmap dll="gdk-x11-2.0" target="libgdk-x11-2.0.so.0" />
-</configuration>
