@@ -8,6 +8,14 @@
     </Configuration>
   </Configurations>
   <Contents>
+    <File name="Mtp/FileType.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/ErrorCode.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/Error.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/FileSampleData.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/Album.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/Folder.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/MtpDevice.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mtp/Track.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
